--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,12 +35,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run tests
-        run: pnpm run test --filter=@front_lite_chapter3-1/after
+      - name: Run tests (after package only)
+        run: pnpm test:run:after
         continue-on-error: true
 
-      - name: Build
-        run: pnpm run build --filter=@front_lite_chapter3-1/after
+      - name: Build (after package only)
+        run: pnpm build:after
         env:
           NODE_ENV: production
 
@@ -62,4 +62,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
